Removing HasTrackId interface & sundry typo corrections
* The FunctionalInterface HasTrackId is not used, so its being removed
* Many small typo changes